# proto-vulcan

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: grcov.yml  rust.yml
examples/: diseq.rs  easy-zebra.rs  hard-zebra.rs  medium-zebra.rs  n-queens.rs  simple.rs  sudoku.rs  tree-diseq.rs  tree-nodes.rs
macros/: Cargo.toml
macros/src/: argument.rs  clause.rs  closure.rs  compound.rs  conjunction.rs  diseq.rs  eq.rs  fngoal.rs  for_operator.rs  fresh.rs  lib.rs  loop_operator.rs  operator.rs  pattern.rs  project.rs  query.rs  relation.rs  treeterm.rs  typed_variable.rs  value.rs
src/: compound.rs  engine.rs  goal.rs  lib.rs  lresult.rs  lterm.rs  lvalue.rs  parse.rs  query.rs  solver.rs  stream.rs  user.rs
src/debugger/: mod.rs  ui.rs
src/operator/: all.rs  any.rs  anyo.rs  closure.rs  cond.rs  conda.rs  conde.rs  condu.rs  conj.rs  conj_test.rs  dfs.rs  disj.rs  everyg.rs  fngoal.rs  fresh.rs  matcha.rs  matche.rs  matchu.rs  mod.rs  onceo.rs  project.rs
src/relation/: always.rs  alwayso.rs  append.rs  appendo.rs  cons.rs  conso.rs  diseq.rs  diseqfd.rs  distinct.rs  distinctfd.rs  distincto.rs  domfd.rs  empty.rs  emptyo.rs  eq.rs  fail.rs  first.rs  firsto.rs  infd.rs  ltefd.rs  ltfd.rs  member.rs  member1.rs  member1o.rs  membero.rs  minusfd.rs  mod.rs  never.rs  nevero.rs  permute.rs  permuteo.rs  plusfd.rs  plusz.rs  rember.rs  rembero.rs  rest.rs  resto.rs  succeed.rs  timesfd.rs  timesz.rs
src/relation/clpfd/: diseqfd.rs  distinctfd.rs  infd.rs  ltefd.rs  ltfd.rs  minusfd.rs  mod.rs  plusfd.rs  timesfd.rs
src/relation/clpz/: mod.rs
src/state/: fd.rs  map_sum.rs  mod.rs  reification.rs  substitution.rs  unification.rs
src/state/constraint/: fd.rs  mod.rs  store.rs  tree.rs  z.rs
