[package]
name = "proto-vulcan"
version = "0.1.2"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
description = "A miniKanren-family relational logic programming language embedded in Rust"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/proto-vulcan/"

[dependencies]
proto-vulcan-macros = { version = "=0.1.2", path = "macros" }
derivative = "2.1"

[dev-dependencies]
itertools = "0.9.0"

[workspace]
members = ["macros"]
