[package]
name = "proto-vulcan"
version = "0.1.5"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
description = "A miniKanren-family relational logic programming language embedded in Rust"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/proto-vulcan/"
keywords = ["logic", "programming", "language"]

[dependencies]
proto-vulcan-macros = { version = "=0.1.5", path = "macros" }
derivative = "2.1"

[target.'cfg(debugger)'.dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"

[dev-dependencies]
itertools = "0.9.0"

[features]
default = ["core", "extras", "clpfd", "clpz"]
core = []
extras = []
clpfd = []
clpz = []
debugger = []

[workspace]
members = ["macros"]

[[example]]
name = "sudoku"
required-features = ["clpfd"]

[[example]]
name = "n-queens"
required-features = ["clpfd"]
