[package]
name = "proto-vulcan-macros"
version = "0.1.1"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true

