[package]
name = "proto-vulcan-macros"
version = "0.1.5"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
description = "Internal macro library for proto-vulcan"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/proto-vulcan/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

